# OnJava8-Tools

./: .gitignore  AnalyzeResults.py  BuildEPUB.py  CheckReformatted.py  Disassemble.py  Examples.py  Findbugs.py  FootnoteFix.py  README.md  Reformat.py  SampleBook.py  ShowFindbugs.py  Spelling.py  Tables.py  Validate.py  __tests.bat  _bracket_tags.py  _capture_gradle.bat  _check_markdown.bat  _linewidth.py  _output_file_check.bat  _output_file_check.py  _refresh_examples.bat  _update_extracted_example_output.bat  _update_extracted_example_output.py  _verify_output.bat  _verify_output.py  a.bat  ak.bat  aspell.en.pws  b.bat  backupall.bat  bracket_tags.py  build_directories_independently.py  c.bat  cf.bat  check_book.py  check_links.py  check_markdown.py  check_section_heads.py  (+68 more)
conversion_tools/: Fix_Footnotes.py  FootnoteFix.py
sublime-text-user/: Default (Windows).sublime-keymap  Java-compile.sublime-build  Preferences.sublime-settings  ShowJavaExampleOutputCommand.py  _copy_to_git_repo.bat  callout.sublime-snippet  config.py  define-rand.sublime-snippet  edit-code-listing.py  find-wide-lines.sublime-build  foreach-println.sublime-snippet  import-stream.sublime-snippet  import-util.sublime-snippet  insert-current-code-listing.py  insert-java-code.sublime-macro  line-width-checker.py  point.sublime-snippet  tostring.sublime-snippet  update-code-listing.py
zzzResidual/: BuildPDF.py  IntegrateExampleOutput.py  Pandoc-PDFBuild.py  Wiki-notes-bitbucket.txt  _update_extracted_example_output.py  code_listing.py  detect_chapter_references.py  help.bat  java_main.py  no.bat  (+11 more)
(+2 files in other folders)
