[tool.poetry]
name = "markdown"
version = "0.1.0"
description = "Markdown manipulation commands"
authors = ["Bruce Eckel <BruceTEckel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
backtrace = "^0.2.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkd = 'markdown:cli'
